--- a/WinUI3Template/Views/MainPage.xaml
+++ b/WinUI3Template/Views/MainPage.xaml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Page
-    x:Class="SistemaVentas.Views.MainPage"
+    x:Class="WinUI3Template.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="using:SistemaVentas"
+    xmlns:local="using:WinUI3Template"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
     <Page.Content>
